@@ -145,7 +145,7 @@ com_resume(wordlist *wl)
    if (rawfileFp){
       if (ftell(rawfileFp)==0) {
          (void) fclose(rawfileFp);
-         (void) remove(last_used_rawfile);
+         (void) unlink(last_used_rawfile);
       } else {
          (void) fclose(rawfileFp);
       }
