@@ -1,3 +1,10 @@
+2011-08-21  Robert Larice
+ * src/main.c ,
+ * src/frontend/runcoms.c ,
+ * src/frontend/runcoms2.c :
+   use unlink() instead of remove()
+     thanks to Marcel Hendrix
+
 2011-08-20  Robert Larice
  * src/spicelib/devices/adms/admst/ngspice.xml :
    #7/7 use a subdirectory "ngspice" for includes to create a uniq namespace
